--- a/02_Secret_Sharer/views/signup.ejs
+++ b/02_Secret_Sharer/views/signup.ejs
@@ -184,7 +184,7 @@
 
 <h1>Create Your Account</h1>
 
-<form action="/user/singup" method="post">
+<form action="/user/signup" method="post">
     <label for="username">Username:</label>
     <input type="text" name="username" id="username" required placeholder="Enter your username">
 
@@ -199,7 +199,7 @@
     <div class="login-extras">
         <a href="#" class="forgot-password">Forgot your password?</a>
         <div class="signup-link">
-            Don't have an account? <a href="/user/login">Sign up here</a>
+            Already have an account? <a href="/user/login">Sign In here</a>
         </div>
     </div>
 </form>
